test_next-20150716/20150722041533/build/defconfig/build_20150722041533_log.txt
test_build: Wed Jul 22 04:16:12 PDT 2015: started on defconfig test_next-20150716 (6593e2dcdedd0493e1b1fcb419609d2101c4d0be)
test_build: Wed Jul 22 04:16:12 PDT 2015: serial is 20150722041533
<stdin>:1253:2: warning: #warning syscall userfaultfd not implemented [-Wcpp]
In file included from arch/arm64/kernel/sys32.c:51:0:
./arch/arm64/include/asm/unistd32.h:801:1: error: array index in initializer exceeds array bounds
 __SYSCALL(__NR_mlock2, sys_mlock2)
 ^
./arch/arm64/include/asm/unistd32.h:801:1: error: (near initialization for ‘compat_sys_call_table’)
./arch/arm64/include/asm/unistd32.h:801:1: warning: excess elements in array initializer
./arch/arm64/include/asm/unistd32.h:801:1: warning: (near initialization for ‘compat_sys_call_table’)
./arch/arm64/include/asm/unistd32.h:803:1: error: array index in initializer exceeds array bounds
 __SYSCALL(__NR_munlock2, sys_munlock2)
 ^
./arch/arm64/include/asm/unistd32.h:803:1: error: (near initialization for ‘compat_sys_call_table’)
./arch/arm64/include/asm/unistd32.h:803:1: warning: excess elements in array initializer
./arch/arm64/include/asm/unistd32.h:803:1: warning: (near initialization for ‘compat_sys_call_table’)
./arch/arm64/include/asm/unistd32.h:805:1: error: array index in initializer exceeds array bounds
 __SYSCALL(__NR_munlockall2, sys_munlockall2)
 ^
./arch/arm64/include/asm/unistd32.h:805:1: error: (near initialization for ‘compat_sys_call_table’)
./arch/arm64/include/asm/unistd32.h:805:1: warning: excess elements in array initializer
./arch/arm64/include/asm/unistd32.h:805:1: warning: (near initialization for ‘compat_sys_call_table’)
make[1]: *** [arch/arm64/kernel/sys32.o] Error 1
make[1]: *** Waiting for unfinished jobs....
make: *** [arch/arm64/kernel] Error 2
make: *** Waiting for unfinished jobs....
In file included from mm/memcontrol.c:64:0:
mm/memcontrol.c: In function ‘memcg_write_event_control’:
include/linux/file.h:55:9: warning: ‘cfd’ may be used uninitialized in this function [-Wmaybe-uninitialized]
  return __to_fd(__fdget(fd));
         ^
mm/memcontrol.c:3899:20: note: ‘cfd’ was declared here
  unsigned int efd, cfd;
                    ^
test_build: Wed Jul 22 04:16:45 PDT 2015: FAILED on defconfig test_next-20150716
test_build: Wed Jul 22 04:16:45 PDT 2015: ended on defconfig test_next-20150716
